--- a/src/app/admin/components/comments-block/comments-block.component.scss
+++ b/src/app/admin/components/comments-block/comments-block.component.scss
@@ -51,3 +51,8 @@ mat-form-field {
   .empty-comments {
       justify-content: center;
   }
+
+  .save-btn-container {
+    display: inline-block;    
+    margin-left: 2rem;
+}
