--- a/src/app/admin/components/practice-section/practice-section.component.scss
+++ b/src/app/admin/components/practice-section/practice-section.component.scss
@@ -5,7 +5,6 @@
     margin: 15px 0;
 }
 
-
 .task-title {
     margin: 2rem;
 }
@@ -24,7 +23,6 @@
 mat-stepper {
     max-width: 100%;
     box-sizing: border-box;
-    padding-right: 50px;
 }
 
 @media (max-width: 840px) {
@@ -39,4 +37,26 @@ mat-stepper {
 
 mat-divider {
     margin-bottom: 15px;
+}
+
+.dashboard-container {
+    margin-top: 50px;
+}
+
+.section-container {
+    padding: 0px 40px 50px 40px;
+}
+
+@media (max-width: 840px) {
+    .section-container {
+        padding: 0px 0px 0px 0px;
+    }
+
+    .max-width {
+        max-width: 100vw;
+    }
+}
+
+.save-btn {
+    background: white;
 }
