--- a/src/app/admin/components/tests-section/tests-section.component.html
+++ b/src/app/admin/components/tests-section/tests-section.component.html
@@ -35,33 +35,7 @@
         
       </div>
 
-      <div [@fade] class="alert-changes" *ngIf="isSaveChangesBlockOpen">
-        <div class="flex h-end height-15px">
-          <button (click)="isSaveChangesBlockOpen = false" matTooltip="Close" [matTooltipShowDelay]="toolTipDelay" mat-icon-button color="warn">
-            <mat-icon>close</mat-icon>
-          </button>
-        </div>
-        <div class="text-center flex content-center v-center">
-          <p><strong>Save changes on this page?</strong></p>
-        </div>
-        
-        <div class="flex content-center mb-1">
-          <div>
-            <button  (click)="saveChanges()" mat-stroked-button class="c-green">
-              Yes
-            </button>
-          </div>
-          <div class="ml-1">
-            <button
-            (click)="removeChanges()"
-            mat-stroked-button
-            color="warn"
-            >
-            Remove all changes
-            </button>
-          </div>
-        </div>
-      </div>
+      <app-save-confirmation [@fade] (onAction)="saveConfirmation($event)" *ngIf="isSaveChangesBlockOpen"></app-save-confirmation>
 
       <app-create-tests [@fade] *ngIf="isCreateContentOpen" (onCreateTests)="onCreateTests($event)"></app-create-tests>
 
