front-end is ready 1.2 (without end-points)

--- a/src/app/admin/components/practice-section/practice-section.component.html
+++ b/src/app/admin/components/practice-section/practice-section.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="isLoading">
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</div>
+
 <div class="section-container">
   <div class="flex column max-width">
     <div class="dashboard-container flex v-center">
